Added levels. Level class includes the enemy bases

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,12 @@ body {
     font-family: 'Monoton', cursive;*/
 }
 
-#garden,
+#backgroundImage1,
+#backgroundImage2,
+#backgroundImage3,
+#backgroundImage4,
+#backgroundImage5,
+#backgroundImage6,
 #bomber1-dead,
 #bomber2-dead,
 #bomber3-dead,
