--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,20 @@ body {
 /*CSS FOR THE CANVAS*/
 
 #upper {
-    display: none;
     width: 86vw;
     position: absolute;
     z-index: 1;
     text-align: left;
     left: 7vw;
     margin: 3vh auto 3vh auto;
+}
+
+.board:first-of-type {
+    display: block;
+}
+
+.board {
+    display: none;
 }
 
 #canvas {
@@ -49,6 +56,12 @@ body {
 
 #score {
     float: right;
+    clear: right;
+}
+
+#max-score {
+    float: right;
+    font-weight: bold;
 }
 
 
@@ -57,21 +70,42 @@ body {
 #pre-title {
     font-family: 'Monoton', cursive;
     font-size: 24px;
-    margin: 30px auto 20px auto;
-    color: #32CD32;
+    margin: 20px auto 15px auto;
+    color: #556B2F;
 }
 
 h1 {
     font-family: 'Monoton', cursive;
     font-size: 44px;
-    margin: 20px auto 30px auto;
+    margin: 15px auto 20px auto;
     color: #228B22;
 }
 
 .normal-text {
     font-size: 16px;
-    margin: 10px auto;
+    margin: 5px auto;
     color: #234;
+}
+
+#choose-to-start {
+    animation-name: blink;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes blink {
+    0% {
+        font-weight: normal;
+    }
+    50% {
+        font-weight: bold;
+        color: #8B4513;
+    }
+    100% {
+        font-weight: normal;
+    }
 }
 
 #start-screen {
@@ -79,42 +113,57 @@ h1 {
     width: 90vw;
     height: 90vh;
     text-align: center;
-    background-color: #fffacd;
     border: 2px solid #F0E68C;
     border-radius: 5px;
+    background: #fffacd;
+    background: -webkit-radial-gradient( #ADFF2F, #F0E68C, #FFD700);
+    background: -o-radial-gradient( #ADFF2F, #F0E68C, #FFD700);
+    background: -moz-radial-gradient( #ADFF2F, #F0E68C, #FFD700);
+    background: radial-gradient( #ADFF2F, #F0E68C, #FFD700);
 }
 
 section {
     margin: 10px;
+    text-align: center;
 }
 
 .choose-bomber {
     display: inline-block;
     width: 200px;
     height: 200px;
-    margin: 20px;
+    margin: 10px 15px;
     background-color: #F0E68C;
     border: 2px solid #D2691E;
     border-radius: 5px;
     text-align: center;
 }
 
+.bomber-name {
+    margin-top: 5px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #8B4513;
+}
+
 .bomber-image {
     width: 100px;
     height: 60px;
-    margin: 10px;
+    margin: 7px 10px 0px 10px;
+    float: left;
+}
+
+.bullet-image {
+    width: 30px;
+    height: 7px;
+    margin: 15px 25px 10px 5px;
+    float: left;
 }
 
 .bomb-image {
     width: 40px;
     height: 20px;
-    margin: 10px;
-}
-
-.bullet-image {
-    width: 30px;
-    height: 6px;
-    margin: 10px;
+    margin: 0px 5px 10px 25px;
+    float: left;
 }
 
 #error-message {
@@ -131,9 +180,30 @@ section {
     border: 1px solid #32CD32;
     border-radius: 5px;
     box-shadow: 1px 1px #228B22;
+    margin: 10px auto 5px auto;
 }
 
 .selected {
     background-color: #9ACD32;
     border: 2px solid #228B22;
+}
+
+.statistics {
+    clear: all;
+    display: inline-block;
+    /*text-align: right;*/
+}
+
+.statistics span {
+    width: 80px;
+    text-align: left;
+    display: inline-block;
+    margin: 0 7px;
+}
+
+.statistics progress {
+    width: 80px;
+    text-align: right;
+    display: inline-block;
+    margin: 0 7px;
 }
